Cambios en el diseño

--- a/frontend/Proyecto/src/app/componentes/auxiliares/paginacion/paginacion.component.html
+++ b/frontend/Proyecto/src/app/componentes/auxiliares/paginacion/paginacion.component.html
@@ -1,5 +1,5 @@
 <div id="indices" class="mx-auto w-auto text-align-center">
-    <div id="cantidad" class="hint-text">Mostrando <b>10</b> de <b>{{count}}</b> resultados</div>
+    <div id="cantidad" class="hint-text">Mostrando <b>{{listObjectslength}}</b> de <b>{{count}}</b> resultados</div>
     <!-- <div id="cantidad" class="hint-text">Page {{pag_actual}}</div> -->
     <ul id="paginacion" class="pagination">
         <li  class="page-item {{previousControl}}" (click)="cambiarPagina(pag_actual-1)"><a  class="page-link">Previous</a></li>
