--- a/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/perfil/perfil.component.html
@@ -12,7 +12,7 @@
                     <div id="campos" class="pt-2">
 
                         <div class="mt-5">
-                            <p class="label-tipo">Selecciona un tipo:</p>
+                            <p class="label-tipo">Tipo de identificación:</p>
                             <input #inputRUC (input)="changeTipo(inputRUC.value)" type="radio" id="RUC" name="tipo"
                                 value="RUC" checked disabled>
                             <label class="label-tipo me-4" for="RUC">RUC</label>
