--- a/frontend/Proyecto/src/app/componentes/empresa/editar-user/editar-user.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/editar-user/editar-user.component.html
@@ -1,12 +1,8 @@
-<div class="row p-md-5">
+<div class="row">
 
     <div class="col-9 mx-auto">
-        <div id="container-titulo">
-            <span>
-                <div id="titulo">
-                    <h1 class="text-center">Editar informacion de usuario</h1>
-                </div>
-            </span>
+        <div id="container-titulo" class="row w-100 mt-4">
+            <h1 id="titulo" class="m-auto w-auto text-center">Editar informacion de usuario</h1>
         </div>
         <div class="card-body">
             <fieldset id="user-form-edit">
