--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.css
@@ -74,3 +74,12 @@
     background-size: cover; */
     background-color: white;
 }
+
+/* submenu */
+#ul-nav-container > ul{
+    display: none;
+}
+
+.rotate-45{
+    transform: rotate(90deg);
+}
