--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -14,7 +14,7 @@
                 </li>
                 <li class="nav-item" routerLink="cambiar-contrasenia" *ngIf="permissions.change_profile">
                     <mat-icon> vpn_key</mat-icon>
-                    <a class="nav-link active" aria-current="page" routerLink="cambiar-contrasenia">
+                    <a class="nav-link active" aria-current="page" >
                         <span data-feather="cambiar_contraseña"></span>
                         Cambiar Contraseña
                     </a>
@@ -22,7 +22,7 @@
                 </li>
                 <li class="nav-item" routerLink="vista-empresa" *ngIf="permissions.view_empresa">
                     <mat-icon> business</mat-icon>
-                    <a class="nav-link active" aria-current="page" routerLink="vista-empresa">
+                    <a class="nav-link active" aria-current="page" >
                         <span data-feather="view-company"></span>
                         Empresa
                     </a>
@@ -31,7 +31,7 @@
 
                 <li class="nav-item" routerLink="grupos-permisos" *ngIf="permissions.view_user || permissions.add_user">
                     <mat-icon>group</mat-icon>
-                    <a class="nav-link active" aria-current="page" routerLink="grupos-permisos">
+                    <a class="nav-link active" aria-current="page" >
                         <span data-feather="grupos-permisos"></span>
                         Usuarios
                     </a>
@@ -40,7 +40,7 @@
                 <li class="nav-item" routerLink="grupos" *ngIf="permissions.view_group || permissions.add_group">
                     <!-- <mat-icon>how_to_reg</mat-icon> -->
                     <mat-icon>assignment_ind</mat-icon>
-                    <a class="nav-link active" aria-current="page" routerLink="grupos">
+                    <a class="nav-link active" aria-current="page" >
                         <span data-feather="grupos"></span>
                         Roles
                     </a>
@@ -49,20 +49,38 @@
 
                 <li class="nav-item" routerLink="empresasTemp" *ngIf="permissions.view_empresatemp">
                     <mat-icon> business</mat-icon>
-                    <a class="nav-link" routerLink="empresasTemp">
+                    <a class="nav-link" >
                         <span data-feather="empresasTemporales"></span>
                         Consultas Empresas
                     </a>
                     <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
-                <li class="nav-item" routerLink="documentos-company" *ngIf="permissions.view_documentos">
+                <li #li class="nav-item" (click)="submenu(li)" *ngIf="permissions.view_documentos_emitidos || permissions.view_documentos_recibidos">
                     <mat-icon>file_copy</mat-icon>
-                    <a class="nav-link active" aria-current="page" routerLink="documentos-company">
-                        <span data-feather="documentos-company"></span>
+                    <a class="nav-link active" aria-current="page" >
+                        <span data-feather="documentos"></span>
                         Documentos
                     </a>
-                    <mat-icon>arrow_forward_ios</mat-icon>
+                    <mat-icon class="arrow">arrow_forward_ios</mat-icon>
                 </li>
+                <ul>
+                    <li class="nav-item"  [routerLink]="['./documentos']" [queryParams]="{tipo:'emitidos'}" *ngIf="permissions.view_documentos_emitidos">
+                        <!-- <mat-icon>file_copy</mat-icon> -->
+                        <a class="nav-link active" aria-current="page" >
+                            <span data-feather="documentos-emitidos"></span>
+                            Emitidos
+                        </a>
+                        <mat-icon>arrow_forward_ios</mat-icon>
+                    </li>
+                    <li class="nav-item"  [routerLink]="['./documentos']" [queryParams]="{tipo:'recibidos'}" *ngIf="permissions.view_documentos_recibidos">
+                        <!-- <mat-icon>file_copy</mat-icon> -->
+                        <a class="nav-link active" aria-current="page" >
+                            <span data-feather="documentos-recibidos"></span>
+                            Recibidos
+                        </a>
+                        <mat-icon>arrow_forward_ios</mat-icon>
+                    </li>
+                </ul>
             </ul>
         </div>
     </nav>
