--- a/frontend/Proyecto/src/app/componentes/empresa/profile-company/profile-company.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/profile-company/profile-company.component.html
@@ -1,6 +1,5 @@
 <div id="container">
-    <div id="caja"></div>
-    <div id="title">
+    <div id="title" class="row w-100">
         <h1>Perfil Empresa</h1>
     </div>
     <form #form
