--- a/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/vista-empresa/vista-empresa.component.html
@@ -1,9 +1,9 @@
 <div id="container" class="w-100">
-    <div id ="container-titulo">
-        <div id = "titulo-perfil">
-            <h1  id="title" class="text-center font-weight-bold mt-5 mb-4">Perfil Empresa</h1>
-        </div>
+    
+    <div id = "titulo-perfil" class="mt-4 row w-100">
+        <h1  id="title" class="w-auto m-auto text-center font-weight-bold">Perfil Empresa</h1>
     </div>
+    
     <fieldset id="empresa_form">
         <form #form
         autocomplete="off"
