--- a/frontend/Proyecto/src/app/componentes/empresa/crear-grupos/crear-grupos.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/crear-grupos/crear-grupos.component.css
@@ -1,10 +1,3 @@
-#caja{
-    display: flex;
-    background-color: black;
-    height: 120px;
-    border-bottom-right-radius: 18% 75%;
-}
-
 .error {
     color: #f82929;
     font-size: 13px;
@@ -24,4 +17,58 @@
 
 .select-input{
     height: 240px;
+    border-radius: 5px;
+    width:90%;
+    margin-left: 5%;
+    color:#39418a;
+    font-weight: bold;
+    font-size: 15px;
+    font-weight: 1000;
+}
+
+#title{
+    background-color: #00B4C0;
+    padding: 10px 30px 10px 30px;
+    border-radius: 15px;
+    color: white;
+    font-weight: 500;
+}
+
+h4{
+    font-weight: 550;
+    font-size: 16px;
+    color: #00b4c3;
+    margin-left: 8%;
+    opacity:1 !important;
+  }
+
+.label-campos{
+    font-weight: 550;
+    font-size: 16px;
+    color: #00b4c3;
+    margin-left: 8%;
+    opacity:1 !important;
+}
+
+.input-campos{
+    border-radius: 50px;
+    font-weight: 500;
+    width:90%;
+    margin-left: 5%;
+    color:#39418a;
+}
+
+.btn{
+    background-color: #00B4C0;
+    color: white;
+    font-weight: 500;
+}
+
+#container-button-select{
+    row-gap: 25px;
+}
+
+
+input[type$="submit"]{
+    background-color: #ED8336;
 }
