--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
@@ -1,6 +1,8 @@
 <div id="container">
     <div id="tabla" class="">
-        <h1 id="title" class="text-center font-weight-bold mt-5">Roles</h1>
+        <div class="w-100 row mt-4">
+            <h1 id="title" class="w-auto m-auto text-center font-weight-bold">Roles</h1>
+        </div>
         <div class="mt-2 mb-4 d-flex flex-row justify-content-end">
             <!--<div class="d-flex align-items-center">
                 <input #valor (change)=buscador(valor) id="inputbuscador" type="text">
