--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
@@ -1,7 +1,9 @@
 <div id="container">
     <div id="tabla" class="">
         <!-- <div id="caja"></div> -->
-        <h1 id="title" class="text-center font-weight-bold mt-5">Usuarios</h1>
+        <div class="w-100 row mt-4">
+            <h1 id="title" class="w-auto m-auto text-center font-weight-bold">Usuarios</h1>
+        </div>
         <div class="mt-2 mb-4 d-flex flex-row justify-content-end">
             <!--<div class="d-flex align-items-center">
                 <input #valor (change)=buscador(valor) id="inputbuscador" type="text">
